array list fixes